[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
tracing-actix-web = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
config = "0.11"
chrono = "0.4.15"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1.21.4"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.13.2"
validator = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rand = { version = "0.8", features=["std_rng"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"
